--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="Libraries/gameLibrary.js"></script>
   <script src="Libraries/enemyLibrary.js"></script>
+  <script src="Libraries/attackLibrary.js"></script>
   <script src="sketch.js"></script>
   <div id="scene">
     
